--- a/src/pages/details/styles.css
+++ b/src/pages/details/styles.css
@@ -59,3 +59,9 @@
     margin-top: 0;    
 }
 
+.load{
+    position: fixed;
+    background: #2D2B2B;
+    color: #FB8200;
+    align-items: center;
+}
